// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate field data: > Cellphone 1`] = `
{
  "columns": [
    {
      "icon": "cellphone",
      "id": "{{test-id-nanoid}}",
      "key": "input_{{test-id-nanoid}}",
      "label": "Cellphone",
      "options": {
        "clearable": true,
        "defaultValue": "",
        "disabled": false,
        "isShowLabel": true,
        "labelWidth": 100,
        "placeholder": "Please enter",
        "renderType": 4,
        "required": false,
        "showPassword": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "input",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Checkbox 1`] = `
{
  "columns": [
    {
      "icon": "checkbox",
      "id": "{{test-id-nanoid}}",
      "key": "checkbox_{{test-id-nanoid}}",
      "label": "Checkbox",
      "options": {
        "data": [
          {
            "label": "Option1",
            "value": "{{test-id-nanoid}}",
          },
          {
            "label": "Option2",
            "value": "{{test-id-nanoid}}",
          },
          {
            "label": "Option3",
            "value": "{{test-id-nanoid}}",
          },
        ],
        "dataKey": "",
        "defaultValue": [],
        "disabled": false,
        "displayStyle": "block",
        "isShowLabel": true,
        "labelWidth": 100,
        "required": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "checkbox",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Email 1`] = `
{
  "columns": [
    {
      "icon": "email",
      "id": "{{test-id-nanoid}}",
      "key": "input_{{test-id-nanoid}}",
      "label": "Email",
      "options": {
        "clearable": true,
        "defaultValue": "",
        "disabled": false,
        "isShowLabel": true,
        "labelWidth": 100,
        "placeholder": "Please enter",
        "renderType": 2,
        "required": false,
        "showPassword": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "input",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > ID number 1`] = `
{
  "columns": [
    {
      "icon": "ID",
      "id": "{{test-id-nanoid}}",
      "key": "input_{{test-id-nanoid}}",
      "label": "ID number",
      "options": {
        "clearable": true,
        "defaultValue": "",
        "disabled": false,
        "isShowLabel": true,
        "labelWidth": 100,
        "placeholder": "Please enter",
        "renderType": 3,
        "required": false,
        "showPassword": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "input",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Input 1`] = `
{
  "columns": [
    {
      "icon": "input",
      "id": "{{test-id-nanoid}}",
      "key": "input_{{test-id-nanoid}}",
      "label": "Input",
      "options": {
        "clearable": true,
        "defaultValue": "",
        "disabled": false,
        "isShowLabel": true,
        "isShowWordLimit": false,
        "labelWidth": 100,
        "max": null,
        "min": null,
        "placeholder": "Please enter",
        "renderType": 1,
        "required": false,
        "showPassword": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "input",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Number 1`] = `
{
  "columns": [
    {
      "icon": "numbers",
      "id": "{{test-id-nanoid}}",
      "key": "number_{{test-id-nanoid}}",
      "label": "Number",
      "options": {
        "controls": true,
        "controlsPosition": true,
        "defaultValue": null,
        "disabled": false,
        "isShowLabel": true,
        "labelWidth": 100,
        "max": null,
        "maxlength": null,
        "min": 0,
        "minlength": null,
        "precision": 0,
        "required": false,
        "step": 1,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "number",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Radio 1`] = `
{
  "columns": [
    {
      "icon": "radio",
      "id": "{{test-id-nanoid}}",
      "key": "radio_{{test-id-nanoid}}",
      "label": "Radio",
      "options": {
        "data": [
          {
            "label": "Option1",
            "value": "{{test-id-nanoid}}",
          },
          {
            "label": "Option2",
            "value": "{{test-id-nanoid}}",
          },
          {
            "label": "Option3",
            "value": "{{test-id-nanoid}}",
          },
        ],
        "dataKey": "",
        "defaultValue": "",
        "disabled": false,
        "displayStyle": "block",
        "isShowLabel": true,
        "labelWidth": 100,
        "required": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "radio",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Region 1`] = `
{
  "columns": [
    {
      "icon": "location",
      "id": "{{test-id-nanoid}}",
      "key": "region_{{test-id-nanoid}}",
      "label": "Region",
      "options": {
        "defaultValue": "",
        "filterable": true,
        "isShowLabel": true,
        "labelWidth": 100,
        "placeholder": "Please select",
        "required": false,
        "selectType": 3,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "region",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Select 1`] = `
{
  "columns": [
    {
      "icon": "dropdown0",
      "id": "{{test-id-nanoid}}",
      "key": "select_{{test-id-nanoid}}",
      "label": "Select",
      "options": {
        "clearable": true,
        "data": [
          {
            "label": "Option1",
            "value": "{{test-id-nanoid}}",
          },
          {
            "label": "Option2",
            "value": "{{test-id-nanoid}}",
          },
          {
            "label": "Option3",
            "value": "{{test-id-nanoid}}",
          },
        ],
        "dataKey": "",
        "defaultValue": "",
        "disabled": false,
        "filterable": true,
        "isShowLabel": true,
        "labelWidth": 100,
        "multiple": false,
        "placeholder": "Please select",
        "required": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "select",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > Textarea 1`] = `
{
  "columns": [
    {
      "icon": "textarea",
      "id": "{{test-id-nanoid}}",
      "key": "textarea_{{test-id-nanoid}}",
      "label": "Textarea",
      "options": {
        "clearable": true,
        "defaultValue": "",
        "disabled": false,
        "isShowLabel": true,
        "isShowWordLimit": false,
        "labelWidth": 100,
        "max": null,
        "min": null,
        "placeholder": "Please enter",
        "required": false,
        "rows": 6,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "textarea",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;

exports[`Generate field data: > URL 1`] = `
{
  "columns": [
    {
      "icon": "url",
      "id": "{{test-id-nanoid}}",
      "key": "input_{{test-id-nanoid}}",
      "label": "URL",
      "options": {
        "clearable": true,
        "defaultValue": "",
        "disabled": false,
        "isShowLabel": true,
        "labelWidth": 100,
        "placeholder": "Please enter",
        "renderType": 5,
        "required": false,
        "showPassword": false,
      },
      "style": {
        "width": {
          "mobile": "100%",
          "pc": "100%",
        },
      },
      "type": "input",
    },
  ],
  "id": "{{test-id-nanoid}}",
  "key": "inline_{{test-id-nanoid}}",
  "style": {},
  "type": "inline",
}
`;
